--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!-- API文档 -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
         <!-- PostgreSql驱动 -->
         <dependency>
             <groupId>org.postgresql</groupId>
