OAuth2重构基本完成‘

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -184,6 +184,13 @@ zhiyan:
     # 开发环境：本地运行，使用localhost
     # 生产环境：需要改为实际域名，如 https://yourdomain.com
     callback-base-url: http://localhost:8090
+    # 前端页面URL配置（根据登录状态跳转到不同页面）
+    # TODO: 请根据实际前端部署地址修改以下URL
+    frontend-home-url: http://localhost:8080  # 主页URL（登录成功后跳转）
+    frontend-supplement-url: http://localhost:8080/oauth2/supplement  # 补充信息页面URL
+    frontend-bind-url: http://localhost:8080/oauth2/bind  # 绑定页面URL
+    frontend-error-url: http://localhost:8080/oauth2/error  # 错误页面URL
+
     github:
       # 是否启用GitHub登录
       enabled: true
