腾讯云COS模块构建完成

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -1,5 +1,5 @@
 # 云服务器环境（服务器环境）
-# 新数据库架构：使用PostgreSQL + Schema隔离
+# 新架构：使用PostgreSQL + Schema隔离
 
 server:
   port: 8090
@@ -10,8 +10,7 @@ spring:
 
   # PostgreSQL数据库配置（使用Schema进行逻辑隔离）
   datasource:
-    # 在searchPath中包含所有schema，按优先级排序
-    url: jdbc:postgresql://152.136.245.180:5432/zhiyanplatform?searchPath=zhiyanauth,zhiyanproject,zhiyantasks,zhiyanmessage
+    url: jdbc:postgresql://152.136.245.180:5432/zhiyanplatform?currentSchema=auth&searchPath=auth,public
     username: postgres
     password: zjm10086
     driver-class-name: org.postgresql.Driver
@@ -24,8 +23,8 @@ spring:
       max-lifetime: 1200000
       connection-timeout: 20000
       connection-test-query: SELECT 1
-      # PostgreSQL Schema配置，包含所有业务schema
-      connection-init-sql: SET search_path TO zhiyanauth, zhiyanproject, zhiyantasks, zhiyanmessage
+      # PostgreSQL Schema配置
+      connection-init-sql: SET search_path TO auth, public
 
   # JPA配置
   jpa:
@@ -34,6 +33,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        # 默认Schema配置（用于实体类映射）
+        default_schema: auth
         # 格式化SQL
         format_sql: true
         # 显示SQL
@@ -81,8 +82,9 @@ spring:
       host: 152.136.245.180
       # Redis 服务器连接端口
       port: 6379
-      # Redis 服务器连账密
-      username: default
+      # 用户名
+      username: deafult
+      # Redis 服务器连接密码
       password: zjm10086
       # 连接超时时间（毫秒）
       timeout: 30000
@@ -175,6 +177,16 @@ sse:
 dify:
   stream-enabled: true
 
+# 腾讯云 COS 配置（使用环境变量注入）
+tencent:
+  cos:
+    secret-id: ${TENCENT_COS_SECRET_ID:AKIDxoUxCNM8VmvrZ4TgiYDgvyqY4NVQBj3R}
+    secret-key: ${TENCENT_COS_SECRET_KEY:OcrgXEk3B7pPmywhN1WzCsRp6C6nNmyw}
+    region: ${TENCENT_COS_REGION:ap-beijing}
+    bucket-name: ${TENCENT_COS_BUCKET:achievement-files-1330641416}
+    public-domain: ${TENCENT_COS_PUBLIC_DOMAIN:https://achievement-files-1330641416.cos.ap-beijing.myqcloud.com}
+    default-directory: uploads
+
 # OAuth2第三方登录配置
 zhiyan:
   oauth2:
@@ -184,13 +196,6 @@ zhiyan:
     # 开发环境：本地运行，使用localhost
     # 生产环境：需要改为实际域名，如 https://yourdomain.com
     callback-base-url: http://localhost:8090
-    # 前端页面URL配置（根据登录状态跳转到不同页面）
-    # TODO: 请根据实际前端部署地址修改以下URL
-    frontend-home-url: http://localhost:8080  # 主页URL（登录成功后跳转）
-    frontend-supplement-url: http://localhost:8080/oauth2/supplement  # 补充信息页面URL
-    frontend-bind-url: http://localhost:8080/oauth2/bind  # 绑定页面URL
-    frontend-error-url: http://localhost:8080/oauth2/error  # 错误页面URL
-
     github:
       # 是否启用GitHub登录
       enabled: true
