--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,13 @@
             <version>3.0.2</version>
         </dependency>
 
+        <!--腾讯云对象存储-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.259</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
