--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+
         <!--mapstruct-->
         <dependency>
             <groupId>org.mapstruct</groupId>
