--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,12 @@
             <version>3.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.6</version>
+        </dependency>
+
         <!--腾讯云对象存储-->
         <dependency>
             <groupId>com.qcloud</groupId>
