--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.20.0</version>
+        </dependency>
 
         <!-- Lombok -->
         <dependency>
@@ -141,6 +146,7 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--tika格式库-->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
@@ -153,6 +159,7 @@
             <artifactId>mapstruct</artifactId>
             <version>1.6.3</version>
         </dependency>
+
         <!-- MapStruct-Plus -->
         <dependency>
             <groupId>io.github.linpeilie</groupId>
@@ -208,6 +215,27 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.3.1</version> <!-- 使用最新版本 -->
+        </dependency>
+
+        <!-- Hypersistence Utils - 用于JSONB和数组类型支持 -->
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+        <!-- Diff工具 - 用于生成和应用补丁 -->
+        <dependency>
+            <groupId>io.github.java-diff-utils</groupId>
+            <artifactId>java-diff-utils</artifactId>
+            <version>4.16</version>
+        </dependency>
+
+        <!-- Apache Commons Codec - 用于哈希计算 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.20.0</version>
         </dependency>
 
         <dependency>
