--- a/pom.xml
+++ b/pom.xml
@@ -36,19 +36,13 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!--Spring Boot Web Starter-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <!--Spring Security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!--Spring Data JPA-->
+        <!--Spring Data JPA, 其中hibernate为7.18-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -70,6 +64,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!--websocket+stomp-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
         <!-- API文档 -->
@@ -103,6 +103,26 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.20.0</version>
+        </dependency>
+
+        <!-- Markdown 解析/文本提取-->
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.27.0</version>
+        </dependency>
+
+        <!--itext PDF-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>font-asian</artifactId>
+            <version>9.4.0</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- Lombok -->
@@ -172,10 +192,6 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
         <!-- hutool all -->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -220,8 +236,8 @@
         <!-- Hypersistence Utils - 用于JSONB和数组类型支持 -->
         <dependency>
             <groupId>io.hypersistence</groupId>
-            <artifactId>hypersistence-utils-hibernate-63</artifactId>
-            <version>3.11.0</version>
+            <artifactId>hypersistence-utils-hibernate-71</artifactId>
+            <version>3.12.0</version>
         </dependency>
 
         <!-- Diff工具 - 用于生成和应用补丁 -->
