--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -181,7 +181,7 @@ dify:
 # 腾讯云 COS 配置（使用环境变量注入）
 tencent:
   cos:
-    secret-id: ${TENCENT_COS_SECRET_ID:}
+    secret-id: ${TENCENT_COS_SECRET_ID}
     secret-key: ${TENCENT_COS_SECRET_KEY}
     region: ${TENCENT_COS_REGION}
     bucket-name: ${TENCENT_COS_BUCKET}
