dify能够对话，文件上传成功但看不到。预备开始更改任务附件的bug

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -181,7 +181,7 @@ sse:
 # Dify流式配置
 dify:
   apiUrl: https://dify.aipfuture.com/v1
-  apiKey: app-Z0Uo6XAytf94sGkSO7oYMQV5
+  api-key: app-Z0Uo6XAytf94sGkSO7oYMQV5
   timeout: 60000
   maxTokens: 4096
   temperature: 0.7
