--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,13 @@
             <version>3.12.0</version>
         </dependency>
 
+        <!--Ip定位库-->
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
         <!-- Diff工具 - 用于生成和应用补丁 -->
         <dependency>
             <groupId>io.github.java-diff-utils</groupId>
