任务提交、审核、下载附件

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,7 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
-
-src/main/resources/application-cloud.yml
+.vscosrc/main/resources/application-cloud.yml
 src/main/resources/application.yml
 
 *.log
