--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,13 @@
             <version>5.8.41</version>
         </dependency>
 
+        <!-- 拼音库，用于 Hutool PinyinUtil 实现 -->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
         <!--lang3工具包-->
         <dependency>
             <groupId>org.apache.commons</groupId>
