--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -242,9 +242,10 @@ zhiyan:
       # ORCID应用的Client ID
       client-id: APP-GRP904LYKJZPI54F
       # ORCID应用的Client Secret
-      client-secret: ${ORCID_CLIENT_SECRET}
+      # 注意：生产环境建议使用环境变量 ${ORCID_CLIENT_SECRET:625d17b7-c0d2-43c7-a607-5532b9614f17}
+      client-secret: ${ORCID_CLIENT_SECRET:625d17b7-c0d2-43c7-a607-5532b9614f17}
       # 授权范围
-      scope: /authenticate openid
+      scope: "/authenticate openid"
       # ORCID API端点（生产环境）
       authorization-uri: https://orcid.org/oauth/authorize
       token-uri: https://orcid.org/oauth/token
