第三方账号绑定监听

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -225,7 +225,7 @@ zhiyan:
       client-id: ${GITHUB_CLIENT_ID:Ov23liNSEUAOKgBl1xBA}
       # GitHub应用的Client Secret（从GitHub开发者平台获取）
       # 建议使用环境变量：${GITHUB_CLIENT_SECRET:your-github-client-secret}
-      client-secret: ${GITHUB_CLIENT_SECRET}
+      client-secret: ${GITHUB_CLIENT_SECRET:760d26f6727b47dd9ed6e24e08532480136052ba}
       # 授权范围（scope）
       # read:user - 读取用户基本信息
       # user:email - 读取用户邮箱（需要此权限才能获取邮箱）
