--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -245,9 +245,16 @@ zhiyan:
       # 注意：生产环境建议使用环境变量 ${ORCID_CLIENT_SECRET:625d17b7-c0d2-43c7-a607-5532b9614f17}
       client-secret: ${ORCID_CLIENT_SECRET:625d17b7-c0d2-43c7-a607-5532b9614f17}
       # 授权范围
-      scope: "/authenticate openid"
+      scope: "/authenticate read-public openid"
       # ORCID API端点（生产环境）
+      # ORCID OAuth2授权端点（官方固定）
       authorization-uri: https://orcid.org/oauth/authorize
+      # ORCID Token获取端点（官方固定）
       token-uri: https://orcid.org/oauth/token
+      # ORCID Pub API基础端点（读取公开数据）
       user-info-uri: https://pub.orcid.org/v3.0
       api-version: v3.0
+      # 请求头配置（官方要求）
+      request-headers:
+        Accept: application/json
+        User-Agent: ZhiyanBackend/1.0 (https://zyplatform.xyz; zjm88822201@126.com)
